@@ -185,6 +185,16 @@ to disable). Same as the RZX Options dialog's
 option.
 .RE
 .PP
+.I "\-f frequency"
+.br
+.I "\-\-sound\-freq frequency"
+.RS
+Specify what frequency Fuse should use for the sound
+device, the default is 32KHz, but some devices only
+support a single frequency or a limited range (e.g.
+48KHz or up to 22KHz).
+.RE
+.PP
 .I "\-\-full\-screen"
 .RS
 Specify whether Fuse should run in full screen mode.
