@@ -62,6 +62,7 @@ sound_load, boolean, 1,, loading-sound
 stereo_ay, boolean, 0,, separation
 stereo_beeper, boolean, 0,, beeper-stereo
 sound_force_8bit, boolean, 0
+sound_freq, numeric, 32000, 'f'
 
 joystick_1, string, NULL, 'j'
 joystick_1_output, numeric, 0
